# mditre

./: .dockerignore  .gitignore  CHANGELOG.md  CONSOLIDATION_SUMMARY.md  CONTRIBUTING.md  CROSS_PLATFORM_PATHS.md  DEVELOPMENT_BEST_PRACTICES.md  DOCKER.md  DOCKER_IMPLEMENTATION_SUMMARY.md  DOCKER_QUICKREF.md  Dockerfile  INSTALLATION.md  MULTI_LANGUAGE_GUIDE.md  Makefile  Makefile.docker  PYTHON_TO_R_CODE_REFERENCE.md  PYTHON_TO_R_CONVERSION_GUIDE.md  QA.md  QUICK_START.md  README.md  R_TEST_ANALYSIS.md  R_TEST_FIX_SUMMARY.md  R_TEST_SUMMARY.md  STRUCTURE_ANALYSIS.md  docker-compose.yml  git_test.txt  pytest.ini  requirements.txt  setup.py  test_mditre_comprehensive.py  test_seeding.py  validate_package.py
.github/workflows/: docker-build.yml  test.yml
Python/: .flake8  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  setup.py
Python/docs/: DATA_LOADER_GUIDE.md  MODULAR_ARCHITECTURE.md  README.md  SEEDING_GUIDE.md
Python/jupyter/: COLAB_BADGES.md  COLAB_COMPATIBILITY_REPORT.md  COLAB_FIXES_APPLIED.md  COLAB_SETUP_GUIDE.md  NOTEBOOK_FIXES.md  README.md  TASK_COMPLETION_SUMMARY.md  run_mditre_test.ipynb
Python/jupyter/tutorials/: Tutorial_1_16s_data.ipynb  Tutorial_2_metaphlan_data.ipynb  Tutorial_Bokulich_16S_data.ipynb
Python/mditre/: __init__.py  data.py  data_utils.py  models.py  seeding.py  trainer.py
Python/mditre/core/: __init__.py  math_utils.py
Python/mditre/data_loader/: README.md  __init__.py
Python/mditre/data_loader/loaders/: amplicon_loader.py  pickle_loader.py
Python/mditre/examples/: data_loader_example.py  modular_architecture_example.py
Python/mditre/layers/: __init__.py
Python/mditre/layers/layer4_rule/: __init__.py
Python/mditre/layers/layer5_classification/: __init__.py
Python/mditre/utils/: __init__.py  path_utils.py
Python/tests/: README.md  conftest.py  test_all.py
R/: .Rbuildignore  .gitignore  .lintr  ARCHITECTURE_UPDATE_2025-11-02.md  COMPLETE_TEST_SUITE_SUMMARY.md  DESCRIPTION  DOCUMENTATION_COMPLETE.md  FEATURE_COMPLETE_SUMMARY.md  FINAL_COMPLETION_SUMMARY.md  FINAL_STATUS_REPORT.md  IMPLEMENTATION_PROGRESS.md  INSTALLATION_GUIDE.md  MDITRE_ENV_INTEGRATION.md  NAMESPACE  NAMESPACE_GENERATION_SUMMARY.md  NEWS.md  PKGDOWN_GUIDE.md  README.md  ROXYGEN2_GUIDE.md  R_PACKAGE_COMPLETE.md  STATUS_SUMMARY.md  TESTING_IMPLEMENTATION.md  TEST_EXECUTION_REPORT.md  TEST_PROGRESS_2025-11-02.md  TORCH_STATUS_REPORT.md  VIGNETTE_IMPLEMENTATION.md  VISUALIZATION_IMPLEMENTATION.md  _pkgdown.yml  fix_torch.R  force_torch_and_test.R  generate_docs.R  generate_docs_simple.R  install_dependencies.R  install_torch_013.R  install_torch_cuda.R  manual_torch_install.R  run_comprehensive_tests.R  run_mditre_tests.R  setup_environment.R  test_mditre_updated.R  (+5 more)
R/R/: base_layer.R  evaluation.R  layer1_phylogenetic_focus.R  layer2_temporal_focus.R  layer3_detector.R  layer4_rule.R  layer5_classification.R  math_utils.R  models.R  path_utils.R  phyloseq_loader.R  seeding.R  trainer.R  visualize.R  zzz.R
R/examples/: complete_model_examples.R  layer2_temporal_focus_examples.R  seeding_examples.R  trainer_examples.R  visualize_examples.R
R/man/: LayerRegistry.Rd  base_layer.Rd  binary_concrete.Rd  classification_abun_layer.Rd  classification_layer.Rd  compare_models.Rd  compute_auc_roc.Rd  compute_f1.Rd  compute_loss_components.Rd  compute_metrics.Rd  compute_phylo_distance.Rd  compute_roc_curve.Rd  create_dataloader.Rd  create_evaluation_report.Rd  cross_validate_mditre.Rd  ensure_dir_exists.Rd  evaluate_model.Rd  evaluate_model_on_data.Rd  evaluation.Rd  filter_otus.Rd  find_project_root_by_markers.Rd  get_data_dir.Rd  get_default_mditre_seeds.Rd  get_mditre_seed_generator.Rd  get_output_dir.Rd  get_package_root.Rd  get_platform_info.Rd  get_project_root.Rd  get_python_dir.Rd  get_r_dir.Rd  inv_transf_log.Rd  (+53 more)
docs/: DEVELOPMENT.md  EFFICIENCY_REPORT.md  SEEDING.md  SEEDING_INTEGRATION.md  TRAINER_FIXES.md
docs_archive/: CHECKLIST.md  COMPREHENSIVE_TESTING_PLAN.md  DATA_LOADER_GUIDE.md  IMPLEMENTATION_COMPLETE.md  MODULAR_ARCHITECTURE.md  PACKAGE_INTEGRITY_REPORT.md  QA_CHECKLIST.md  QA_TEST_REPORT.md  README.md  REFACTORING_PLAN.md  REFACTORING_SUMMARY.md  STATUS.md  TESTING_IMPLEMENTATION_STATUS.md  TEST_RESULTS_legacy.md
jupyter/: run_mditre_test.ipynb
mditre/: __init__.py  data.py  data_utils.py  models.py  trainer.py
mditre.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
mditre_outputs/: mditre_trained_model.pth  seed_info.json  test_results.json  training_history.json
neural_network/: README.md  five_layer_architecture_demo.ipynb
scripts/: README.md  test_mditre_python.py  verify_cross_platform.py
tests/: README.md  test_all.py
(+44 files in other folders)
